[package]
name = "teachable03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
test-bpf = []

[dependencies]
borsh = { version = "1.4.0", features = ["derive"] }
solana-program = "=1.17.32"

[dev-dependencies]
solana-logger = "1.17.32"
solana-program-test = "1.17.32"
solana-sdk = "1.17.32"
solana-validator = "1.17.32"

[lib]
name = "teachable03"
crate-type = ["cdylib", "rlib"]
